--- a/app/views/infrastructures/modal/_modal_create_volume.html.erb
+++ b/app/views/infrastructures/modal/_modal_create_volume.html.erb
@@ -63,7 +63,7 @@
             <%= t('helpers.links.create') %>
           </button>
         </div>
-        <div-loader v-if="loading_s" text="<%= t 'common.msg.creating' %>"></div-loader>
+        <div-loader v-else-if="loading_s" text="<%= t 'common.msg.creating' %>"></div-loader>
       </div>
     </div>
   </div>
