--- a/app/views/infrastructures/modal/_modal_detach_ec2.html.erb
+++ b/app/views/infrastructures/modal/_modal_detach_ec2.html.erb
@@ -32,7 +32,7 @@
           <button class="btn btn-default" data-dismiss="modal" aria-hidden="true"><%= t('helpers.links.cancel') %></button>
           <button @click="detach_ec2()" data-dismiss="modal" class="btn btn-warning"><%= t('helpers.links.detach') %></button>
         </div>
-        <div-loader v-if="loading_s"></div-loader>
+        <div-loader v-else-if="loading_s"></div-loader>
       </div>
     </div>
   </div>
