--- a/app/views/infrastructures/modal/_modal_snapshot_retention_policy.html.erb
+++ b/app/views/infrastructures/modal/_modal_snapshot_retention_policy.html.erb
@@ -29,7 +29,7 @@
           <button class="btn btn-default" data-dismiss="modal" aria-hidden="true"><%= t('helpers.links.close') %></button>
           <button @click="save_retention_policy(volume_selected, editing_policy)" :disabled="!is_valid_amount && editing_policy.enabled"  class="btn btn-primary"><%= t('helpers.titles.save') %></button>
         </div>
-        <div-loader v-if="loading"></div-loader>
+        <div-loader v-else-if="loading"></div-loader>
       </div>
     </div>
   </div>
