--- a/app/views/infrastructures/modal/_modal_terminate_ec2.html.erb
+++ b/app/views/infrastructures/modal/_modal_terminate_ec2.html.erb
@@ -20,7 +20,7 @@
           <button class="btn btn-default" data-dismiss="modal" aria-hidden="true"><%= t('helpers.links.cancel') %></button>
           <button @click="terminate_ec2()" data-dismiss="modal" class="btn btn-danger"><%= t('helpers.links.terminate') %></button>
         </div>
-        <div-loader v-if="loading_s"></div-loader>
+        <div-loader v-else-if="loading_s"></div-loader>
       </div>
     </div>
   </div>
