--- a/app/views/vue/_infra_logs_tabpane.html.erb
+++ b/app/views/vue/_infra_logs_tabpane.html.erb
@@ -1,3 +1,4 @@
+<div>
 <div class="pull-right">
   <div class="btn-group" role="group">
     <a class="btn btn-success btn-sm"
@@ -40,12 +41,12 @@
       <td><input type="radio" v-model="picked_id" v-bind:value="log.id"/></td>
       <td><span v-if="log.admin" class="label label-info">admin</span>&nbsp;{{log.email}}</td>
       <td><span :class="status_class(log.status)" v-text="status_text(log.status)" class="label"></span></td>
-      <td>{{log.title}}<a v-if="log.long" href="#" data-toggle="collapse" data-target="#logbody-{{log.id}}" class="accordion-toggle popovermore">...see all </a></td>
+      <td>{{log.title}}<a v-if="log.long" href="#" data-toggle="collapse" :data-target="'#logbody-' + log.id" class="accordion-toggle popovermore">...see all </a></td>
       <td v-text="toLocaleString(log.created_at)"></td>
     </tr>
     <tr v-if="log.long">
       <td colspan="4" class="hidden-row">
-        <div class="accordion-body collapse" id="logbody-{{log.id}}">
+        <div class="accordion-body collapse" :id="'logbody-' + log.id">
           <%= copy_to_clipboard_button('log.details', 'pull-right') %><pre class="terminal-ansi" style="margin: 5px" v-html="ansi_up(log.details)"></pre>
         </div>
       </td>
@@ -54,3 +55,4 @@
 </table>
 
 <vue-paginator :page="page"></vue-paginator>
+</div>
