Fix: インフラストラクチャの画面をちょっと動かした

--- a/app/views/vue/_edit_ansible_playbook_tabpane.html.erb
+++ b/app/views/vue/_edit_ansible_playbook_tabpane.html.erb
@@ -1,3 +1,4 @@
+<div>
 <h3 class="page-header"><%= t 'nodes.playbook' %></h3>
 
 <div class="col-md-6 col-sm-6">
@@ -53,4 +54,5 @@
   <div v-if="loading" class="form-actions-top">
     <div-loader></div-loader>
   </div>
+</div>
 </div>
