--- a/app/views/vue/_serverspec_tabpane.html.erb
+++ b/app/views/vue/_serverspec_tabpane.html.erb
@@ -1,3 +1,4 @@
+<div>
 <h3 class="page-header"><%= t 'servertests.select_serverspec' %></h3>
 
 <div class="col-md-6 col-sm-6">
@@ -85,4 +86,5 @@
       </div>
     </div>
   </div>
+</div>
 </div>
