--- a/app/views/vue/_elb_tabpane.html.erb
+++ b/app/views/vue/_elb_tabpane.html.erb
@@ -4,9 +4,9 @@
 <div class="panel-group">
   <div class="panel panel-default">
     <div class="panel-heading" role="tab" id="headingOne">
-        <h4 class="panel-title">
-            DNS name
-        </h4>
+      <h4 class="panel-title">
+        DNS name
+      </h4>
     </div>
     <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
       <div class="panel-body">
@@ -18,7 +18,7 @@
     <div class="panel-heading" role="tab" id="headingTwo">
       <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
         <h4 class="panel-title">
-            <%=t('ec2_instances.listeners')%>
+          <%= t('ec2_instances.listeners') %>
         </h4>
       </a>
     </div>
@@ -26,36 +26,36 @@
       <div class="panel-body">
         <table class="table table-striped">
           <thead>
-            <tr>
-              <th><%=t('ec2_instances.protocol')%></th>
-              <th><%=t('ec2_instances.lb_port')%></th>
-              <th><%=t('ec2_instances.instance_protocol')%></th>
-              <th><%=t('ec2_instances.instance_port')%></th>
-              <th><%=t('ec2_instances.certificate_name')%></th>
-              <th><%=t('ec2_instances.btn.edit_to_elb_listener')%></th>
-            </tr>
+          <tr>
+            <th><%= t('ec2_instances.protocol') %></th>
+            <th><%= t('ec2_instances.lb_port') %></th>
+            <th><%= t('ec2_instances.instance_protocol') %></th>
+            <th><%= t('ec2_instances.instance_port') %></th>
+            <th><%= t('ec2_instances.certificate_name') %></th>
+            <th><%= t('ec2_instances.btn.edit_to_elb_listener') %></th>
+          </tr>
           </thead>
 
           <tbody>
-            <tr v-for="l in listeners">
-              <td v-text="l.protocol"></td>
-              <td v-text="l.load_balancer_port"></td>
-              <td v-text="l.instance_protocol"></td>
-              <td v-text="l.instance_port"></td>
-              <td v-text="ssl_certificate_id_to_name(l.ssl_certificate_id)"></td>
-              <td>
-                <button
-                  @click="set_edit_listener_modal_default_value(l.protocol, l.load_balancer_port, l.instance_protocol, l.instance_port, l.ssl_certificate_id)"
-                  class="btn btn-xs btn-default" data-toggle="modal"
-                  role="button" href="#edit-listener-modal">
-                  <%=t('helpers.links.edit')%>
-                </button>
-                <button @click="delete_listener(l.load_balancer_port)" class="btn btn-xs btn-danger" data-toggle="modal" role="button"><%=t('helpers.links.destroy')%></button>
-              </td>
-            </tr>
+          <tr v-for="l in listeners">
+            <td v-text="l.protocol"></td>
+            <td v-text="l.load_balancer_port"></td>
+            <td v-text="l.instance_protocol"></td>
+            <td v-text="l.instance_port"></td>
+            <td v-text="ssl_certificate_id_to_name(l.ssl_certificate_id)"></td>
+            <td>
+              <button
+                @click="set_edit_listener_modal_default_value(l.protocol, l.load_balancer_port, l.instance_protocol, l.instance_port, l.ssl_certificate_id)"
+                class="btn btn-xs btn-default" data-toggle="modal"
+                role="button" href="#edit-listener-modal">
+                <%= t('helpers.links.edit') %>
+              </button>
+              <button @click="delete_listener(l.load_balancer_port)" class="btn btn-xs btn-danger" data-toggle="modal" role="button"><%= t('helpers.links.destroy') %></button>
+            </td>
+          </tr>
           </tbody>
         </table>
-        <button @click="set_create_listener_modal_default_value()" class="btn btn-default" data-toggle="modal" role="button" href="#create-listener-modal"><%=t('ec2_instances.btn.create_to_elb_listener')%></button>
+        <button @click="set_create_listener_modal_default_value()" class="btn btn-default" data-toggle="modal" role="button" href="#create-listener-modal"><%= t('ec2_instances.btn.create_to_elb_listener') %></button>
       </div>
     </div>
   </div>
@@ -63,7 +63,7 @@
     <div class="panel-heading" role="tab" id="headingThree">
       <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
         <h4 class="panel-title">
-            <%=t('ec2_instances.certificate')%>
+          <%= t('ec2_instances.certificate') %>
         </h4>
       </a>
     </div>
@@ -71,22 +71,24 @@
       <div class="panel-body">
         <table class="table table-striped">
           <thead>
-            <tr>
-              <th><%=t('ec2_instances.certificate_name')%></th> <th><%=t('ec2_instances.expiration_date')%></th> <th><%=t('ec2_instances.btn.edit_certificate')%></th>
-            </tr>
+          <tr>
+            <th><%= t('ec2_instances.certificate_name') %></th>
+            <th><%= t('ec2_instances.expiration_date') %></th>
+            <th><%= t('ec2_instances.btn.edit_certificate') %></th>
+          </tr>
           </thead>
 
           <tbody>
-            <tr v-for="s in server_certificates">
-              <td v-text="s.name"></td>
-              <td v-text="expiration_date(s.expiration)"></td>
-              <td>
-                <button @click="delete_server_certificate(s.name)" class="btn btn-xs btn-danger" data-toggle="modal" role="button"><%=t('helpers.links.destroy')%></button>
-              </td>
-            </tr>
+          <tr v-for="s in server_certificates">
+            <td v-text="s.name"></td>
+            <td v-text="expiration_date(s.expiration)"></td>
+            <td>
+              <button @click="delete_server_certificate(s.name)" class="btn btn-xs btn-danger" data-toggle="modal" role="button"><%= t('helpers.links.destroy') %></button>
+            </td>
+          </tr>
           </tbody>
         </table>
-        <button class="btn btn-default" data-toggle="modal" role="button" href="#upload-server-certificate-modal"><%=t('ec2_instances.btn.upload_certificate')%></button>
+        <button class="btn btn-default" data-toggle="modal" role="button" href="#upload-server-certificate-modal"><%= t('ec2_instances.btn.upload_certificate') %></button>
       </div>
     </div>
   </div>
@@ -94,7 +96,7 @@
     <div class="panel-heading" role="tab" id="headingFour">
       <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
         <h4 class="panel-title">
-            <%=t('security_groups.title')%>
+          <%= t('security_groups.title') %>
         </h4>
       </a>
     </div>
@@ -103,7 +105,7 @@
         <table class="table table-condensed">
           <thead>
           <tr>
-            <th width="200"><%= t'security_groups.group_id' %></th>
+            <th width="200"><%= t 'security_groups.group_id' %></th>
             <th><%= t 'security_groups.group_name' %></th>
             <th><%= t 'security_groups.description' %></th>
             <th>Name</th>
@@ -112,8 +114,12 @@
           <tbody>
           <tr v-for="ss in rules_summary" v-show="ss.checked">
             <td>{{ss.group_id}}</td>
-            <td><div class="truncate"> {{ss.group_name}}</div></td>
-            <td><div class="truncate">{{ss.description}}</div></td>
+            <td>
+              <div class="truncate"> {{ss.group_name}}</div>
+            </td>
+            <td>
+              <div class="truncate">{{ss.description}}</div>
+            </td>
             <td v-if="check_tag(ss)">{{ss.tags[0].value}}</td>
             <td v-else></td>
           </tr>
@@ -130,7 +136,7 @@
     <div class="panel-heading" role="tab" id="headingFive">
       <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="true" aria-controls="collapseFive">
         <h4 class="panel-title">
-            <%=t('ec2_instances.instances')%>
+          <%= t('ec2_instances.instances') %>
         </h4>
       </a>
     </div>
@@ -155,22 +161,22 @@
         <div class="col-md-4 col-sm-6 col-xs-12" v-for="e in ec2_instances">
           <div class="panel" :class="panel_class(e.state)">
             <div class="panel-heading">
-                <a href="#" @click="show_ec2(e.instance_id)">{{* e.instance_id}}</a>&nbsp;
+              <a href="#" @click="show_ec2(e.instance_id)">{{* e.instance_id}}</a>&nbsp;
             </div>
             <table class="table">
               <tbody>
-                <tr>
-                  <th><%=t('ec2_instances.state')%></td>
-                  <td><span class="label" :class="label_class(e.state)">{{* e.state}}</span></td>
-                </tr>
-                <tr>
-                  <th><%=t('ec2_instances.reason_code')%></td>
-                  <td>{{* e.reason_code}}</td>
-                </tr>
-                <tr>
-                  <th><%=t('ec2_instances.description')%></td>
-                  <td>{{* e.description}}</td>
-                </tr>
+              <tr>
+                <th><%= t('ec2_instances.state') %></td>
+                <td><span class="label" :class="label_class(e.state)">{{* e.state}}</span></td>
+              </tr>
+              <tr>
+                <th><%= t('ec2_instances.reason_code') %></td>
+                <td>{{* e.reason_code}}</td>
+              </tr>
+              <tr>
+                <th><%= t('ec2_instances.description') %></td>
+                <td>{{* e.description}}</td>
+              </tr>
               </tbody>
             </table>
             <div class="panel-footer">
@@ -208,7 +214,7 @@
 
       <div class="modal-body">
         <label class="control-label"><%= t('ec2_instances.lb_port') %></label>
-        <input type="number" min="0" max="65535" v-model="load_balancer_port" class="form-control" />
+        <input type="number" min="0" max="65535" v-model="load_balancer_port" class="form-control"/>
       </div>
 
       <div class="modal-body">
@@ -223,7 +229,7 @@
 
       <div class="modal-body">
         <label class="control-label"><%= t('ec2_instances.instance_port') %></label>
-        <input type="number" min="0" max="65535" v-model="instance_port" class="form-control" />
+        <input type="number" min="0" max="65535" v-model="instance_port" class="form-control"/>
       </div>
 
       <div class="modal-body">
@@ -266,7 +272,7 @@
 
       <div class="modal-body">
         <label class="control-label"><%= t('ec2_instances.lb_port') %></label>
-        <input type="number" min="0" max="65535" v-model="load_balancer_port" id="edit_listener_load_balancer_port" class="form-control" />
+        <input type="number" min="0" max="65535" v-model="load_balancer_port" id="edit_listener_load_balancer_port" class="form-control"/>
       </div>
 
       <div class="modal-body">
@@ -281,7 +287,7 @@
 
       <div class="modal-body">
         <label class="control-label"><%= t('ec2_instances.instance_port') %></label>
-        <input type="number" min="0" max="65535" v-model="instance_port" id="edit_listener_instance_port" class="form-control" />
+        <input type="number" min="0" max="65535" v-model="instance_port" id="edit_listener_instance_port" class="form-control"/>
       </div>
 
       <div class="modal-body">
@@ -314,7 +320,7 @@
 
       <div class="modal-body">
         <label class="control-label"><%= t('ec2_instances.certificate_name') %></label>
-        <input v-model="server_certificate_name" class="form-control" />
+        <input v-model="server_certificate_name" class="form-control"/>
       </div>
 
       <div class="modal-body">
