--- a/app/views/vue/_add_ec2_tabpane.html.erb
+++ b/app/views/vue/_add_ec2_tabpane.html.erb
@@ -1,24 +1,26 @@
-<h3 class="page-header"><%= t('infrastructures.add_ec2') %></h3>
+<div>
+  <h3 class="page-header"><%= t('infrastructures.add_ec2') %></h3>
 
-<form class="form-horizontal">
-  <div class="form-group">
-    <label class="col-xs-3 control-label" for="add_ec2_physical_id">physical_id</label>
-    <div class="col-xs-7">
-      <select id="add_ec2_physical_id" class="form-control" v-model="physical_id" placeholder="select physical id">
-        <option v-for="t in physical_ids" value="{{t.physical_id}}" v-text="t.physical_id"></option>
-      </select>
+  <form class="form-horizontal">
+    <div class="form-group">
+      <label class="col-xs-3 control-label" for="add_ec2_physical_id">physical_id</label>
+      <div class="col-xs-7">
+        <select id="add_ec2_physical_id" class="form-control" v-model="physical_id" placeholder="select physical id">
+          <option v-for="t in physical_ids" :value="t.physical_id" v-text="t.physical_id"></option>
+        </select>
+      </div>
     </div>
-  </div>
 
-  <div class="form-group">
-    <label class="col-xs-3 control-label" for="add_ec2_screen_name"><%= t('resources.screen_name') %></label>
-    <div class="col-xs-7">
-      <input type="text" v-model="screen_name" id="add_ec2_screen_name" class="form-control" placeholder="optional">
+    <div class="form-group">
+      <label class="col-xs-3 control-label" for="add_ec2_screen_name"><%= t('resources.screen_name') %></label>
+      <div class="col-xs-7">
+        <input type="text" v-model="screen_name" id="add_ec2_screen_name" class="form-control" placeholder="optional">
+      </div>
     </div>
-  </div>
-</form>
+  </form>
 
-<div class="form-actions-top">
-  <button v-if="!loading" @click="submit()" class="btn btn-primary"><%= t 'common.btn.submit' %></button>
-  <div-loader v-if="loading"></div-loader>
+  <div class="form-actions-top">
+    <button v-if="!loading" @click="submit()" class="btn btn-primary"><%= t 'common.btn.submit' %></button>
+    <div-loader v-if="loading"></div-loader>
+  </div>
 </div>
