--- a/app/views/vue/_monitoring_tabpane.html.erb
+++ b/app/views/vue/_monitoring_tabpane.html.erb
@@ -1,19 +1,19 @@
 <div v-if="before_register">
-  <h3 class="page-header"><%= I18n.t('monitoring.register_host')%></h3>
+  <h3 class="page-header"><%= I18n.t('monitoring.register_host') %></h3>
   <div class="alert alert-warning">
     <%= t 'monitoring.msg.before_create_host' %>
   </div>
-  <button v-if="!creating"  data-toggle="modal" data-target="#register-warning" class="btn btn-primary"><%= t 'monitoring.btn.create' %> </button>
+  <button v-if="!creating" data-toggle="modal" data-target="#register-warning" class="btn btn-primary"><%= t 'monitoring.btn.create' %> </button>
   <div-loader v-if="creating"></div-loader>
   <%= render 'monitorings/modal_trigger_register_description' %>
 </div>
 
 <div v-if="!before_register">
   <div class="col-md-12 col-sm-12" v-if="before_setting">
-    <h3 class="page-header"><%= I18n.t('monitoring.title')%>
-    <div class="alert alert-warning h5">
-      <%= t 'monitoring.msg.not_selected' %>
-    </div>
+    <h3 class="page-header"><%= I18n.t('monitoring.title') %>
+      <div class="alert alert-warning h5">
+        <%= t 'monitoring.msg.not_selected' %>
+      </div>
     </h3>
   </div>
 
@@ -25,7 +25,7 @@
             <div class="panel panel-default" v-for="r in resources">
               <div class="panel-heading">
                 <h4 class="panel-title">
-                <a class="accordion-toggle" data-toggle="collapse" href="#monitorings-{{*r.physical_id}}">{{*r.physical_id}}</a>
+                  <a class="accordion-toggle" data-toggle="collapse" href="#monitorings-{{*r.physical_id}}">{{*r.physical_id}}</a>
                 </h4>
               </div>
               <div class="panel-collapse collapse" id="monitorings-{{r.physical_id}}">
@@ -53,30 +53,30 @@
       </div>
 
       <div v-if="show_range">
-          <div class='col-md-3'>
-              <div class="form-group">
-                  <div class='input-group date'>
+        <div class='col-md-3'>
+          <div class="form-group">
+            <div class='input-group date'>
                       <span class="input-group-addon">
                           <span>From: </span>
                       </span>
-                      <input v-datepicker="dt" type='text' class="form-control" placeholder="Start"/>
-                      <input type="hidden">
-                  </div>
-              </div>
+              <input v-datepicker="dt" type='text' class="form-control" placeholder="Start"/>
+              <input type="hidden">
+            </div>
           </div>
-          <div class='col-md-4'>
-              <div class="form-group">
-                  <div class='input-group date'>
+        </div>
+        <div class='col-md-4'>
+          <div class="form-group">
+            <div class='input-group date'>
                       <span class="input-group-addon">
                           <span>To: </span>
                       </span>
-                      <input :disabled="isTo" v-datepicker="dt2" type='text' class="form-control" placeholder="End"/>
-                      <span class="input-group-addon">
+              <input :disabled="isTo" v-datepicker="dt2" type='text' class="form-control" placeholder="End"/>
+              <span class="input-group-addon">
                           <button :disabled="isShow" @click="showDate" class="btn btn-xs btn-default"><span class="glyphicon glyphicon-calendar"></span> Show</button>
                       </span>
-                  </div>
-              </div>
+            </div>
           </div>
+        </div>
       </div>
 
       <div class="col-md-9 col-sm-8">
@@ -100,23 +100,23 @@
 
                 <table class="table">
                   <thead>
-                    <tr>
-                      <th class="col-md-3">URL</th>
-                      <th class="col-md-3">Response Code</th>
-                      <th class="col-md-4">Download Speed (bytes/sec)</th>
-                      <th class="col-md-2">Response Time</th>
+                  <tr>
+                    <th class="col-md-3">URL</th>
+                    <th class="col-md-3">Response Code</th>
+                    <th class="col-md-4">Download Speed (bytes/sec)</th>
+                    <th class="col-md-2">Response Time</th>
 
-                      <!-- TODO -->
-                      <th class="col-md-1" style="border: none"><a class="btn btn-info btn-xs" href="#">グラフ</a></th>
-                    </tr>
+                    <!-- TODO -->
+                    <th class="col-md-1" style="border: none"><a class="btn btn-info btn-xs" href="#">グラフ</a></th>
+                  </tr>
                   </thead>
                   <tbody>
-                    <tr v-for="item in value.data">
-                      <td>{{item.url}}</td>
-                      <td>{{item.response_code}}</td>
-                      <td>{{item.download_speed}}</td>
-                      <td>{{item.response_time}}</td>
-                    </tr>
+                  <tr v-for="item in value.data">
+                    <td>{{item.url}}</td>
+                    <td>{{item.response_code}}</td>
+                    <td>{{item.download_speed}}</td>
+                    <td>{{item.response_time}}</td>
+                  </tr>
                   </tbody>
                 </table>
               </blockquote>
@@ -136,18 +136,22 @@
       <span v-if="no_problem">No Recent Errors</span>
       <table v-if="!no_problem" class="table table-condensed">
         <thead>
-          <tr>
-            <th>hosts</th> <th>triggerid</th> <th>description</th> <th>priority</th> <th>lastchange</th>
-          </tr>
+        <tr>
+          <th>hosts</th>
+          <th>triggerid</th>
+          <th>description</th>
+          <th>priority</th>
+          <th>lastchange</th>
+        </tr>
         </thead>
         <tbody>
-          <tr v-for="p in problems" :class="{danger: p.value === '1'}">
-            <td v-text="p.hosts"></td>
-            <td v-text="p.triggerid"></td>
-            <td v-text="p.description"></td>
-            <td v-text="p.priority"></td>
-            <td v-text="p.lastchange"></td>
-          </tr>
+        <tr v-for="p in problems" :class="{danger: p.value === '1'}">
+          <td v-text="p.hosts"></td>
+          <td v-text="p.triggerid"></td>
+          <td v-text="p.description"></td>
+          <td v-text="p.priority"></td>
+          <td v-text="p.lastchange"></td>
+        </tr>
         </tbody>
       </table>
     </div>
