--- a/app/views/vue/_servertest_results_tabpane.html.erb
+++ b/app/views/vue/_servertest_results_tabpane.html.erb
@@ -1,13 +1,16 @@
 <div>
-<h3 class="page-header"><%= t 'servertests.servertests' %> <small><%= t 'servertests.operation_logs' %></small></h3>
-<div class="col-sm-12">
-  <div class="input-group">
-    <form id="search">
-      <input type="text" name="query" v-model="filterKey" class="form-control" placeholder="<%= t 'infrastructures.search' %>">
-    </form><hr>
-  </div>
-  <table class="table table-hover ssp">
-    <thead>
+  <h3 class="page-header"><%= t 'servertests.servertests' %>
+    <small><%= t 'servertests.operation_logs' %></small>
+  </h3>
+  <div class="col-sm-12">
+    <div class="input-group">
+      <form id="search">
+        <input type="text" name="query" v-model="filterKey" class="form-control" placeholder="<%= t 'infrastructures.search' %>">
+      </form>
+      <hr>
+    </div>
+    <table class="table table-hover ssp">
+      <thead>
       <tr>
         <th v-for="key in columns"
             :class="{active: sortKey === key}"
@@ -16,8 +19,8 @@
           <span v-if="key !== 'id' && key !== 'role'" class="glyphicon pull-right" :class="sortOrders[key] > 0? 'glyphicon-chevron-down' : 'glyphicon-chevron-up'"></span>
         </th>
       </tr>
-    </thead>
-    <tbody class="tbody-infra-log">
+      </thead>
+      <tbody class="tbody-infra-log">
       <tr v-for="
         (entry,index) in servertest_filter">
         <td v-for="key in columns">
@@ -25,20 +28,26 @@
         </td>
       </tr>
       <td v-if="data.length === 0" colspan="6"><%= t('servertests.msg.empty-results') %></td>
-    </tbody>
-  </table>
-  <nav v-if="data.length >= 10">
-    <ul class="pager">
-      <li :class="{disabled: isStartPage}"><a @click="showPrev()" ><span aria-hidden="true">&larr; <%= t 'monitoring.btn.prev' %></span></a></li>
-      <label><%= t 'monitoring.msg.page' %>: &nbsp </label><strong v-html="pageNumber + 1"></strong> <%= t 'monitoring.msg.of' %>&nbsp<span v-html="data.length / pages  | roundup"></span>
-      <li :class="{disabled: isEndPage}"><a @click="showNext()" :disabled="!isEndPage"></span><%= t 'monitoring.btn.next' %> <span aria-hidden="true">&rarr;</span></a></li>
-    </ul>
-  </nav>
-</div>
-
-<div class="col-md-12 col-sm-12">
-  <div v-if="!loading" class="form-actions-top">
-    <button @click="show_ec2()" class="btn btn-sm btn-default"><span class="glyphicon glyphicon-arrow-left"></span> <%= t 'helpers.links.back' %></button>
+      </tbody>
+    </table>
+    <nav v-if="data.length >= 10">
+      <ul class="pager">
+        <li :class="{disabled: isStartPage}">
+          <a @click="showPrev()"><span aria-hidden="true">&larr; <%= t 'monitoring.btn.prev' %></span></a></li>
+        <label><%= t 'monitoring.msg.page' %>:
+          &nbsp </label><strong v-html="pageNumber + 1"></strong> <%= t 'monitoring.msg.of' %>
+        &nbsp<span v-html="data.length / pages  | roundup"></span>
+        <li :class="{disabled: isEndPage}">
+          <a @click="showNext()" :disabled="!isEndPage"></span><%= t 'monitoring.btn.next' %>
+            <span aria-hidden="true">&rarr;</span></a></li>
+      </ul>
+    </nav>
   </div>
-</div>
+
+  <div class="col-md-12 col-sm-12">
+    <div v-if="!loading" class="form-actions-top">
+      <button @click="show_ec2()" class="btn btn-sm btn-default">
+        <span class="glyphicon glyphicon-arrow-left"></span> <%= t 'helpers.links.back' %></button>
+    </div>
+  </div>
 </div>
