--- a/app/views/vue/_view_rules_tabpane.html.erb
+++ b/app/views/vue/_view_rules_tabpane.html.erb
@@ -1,16 +1,17 @@
 <div class="content">
-<h4 v-if="lang === 'en'"> <%= t'security_groups.associated' %> {{physical_id}}
+  <h4 v-if="lang === 'en'"> <%= t 'security_groups.associated' %> {{physical_id}}
     <button @click="print_pdf()" class="btn btn-sm btn-default"><%= fa 'print' %> Print</button>
-</h4>
-<h4 v-if="lang === 'ja'">{{physical_id}} <%= t'security_groups.associated' %>
-  <button @click="print_pdf()" class="btn btn-sm btn-default"><%= fa 'print' %> Print</button>
-</h4>
+  </h4>
+  <h4 v-if="lang === 'ja'">{{physical_id}} <%= t 'security_groups.associated' %>
+    <button @click="print_pdf()" class="btn btn-sm btn-default"><%= fa 'print' %> Print</button>
+  </h4>
 
   <%= render 'infrastructures/security_groups_table' %>
 
-<div class="col-md-12 col-sm-12">
-  <div v-if="!loading" class="form-actions-top">
-    <button @click="show_ec2()" class="btn btn-sm btn-default"><span class="glyphicon glyphicon-arrow-left"></span> <%= t 'helpers.links.back' %></button>
+  <div class="col-md-12 col-sm-12">
+    <div v-if="!loading" class="form-actions-top">
+      <button @click="show_ec2()" class="btn btn-sm btn-default">
+        <span class="glyphicon glyphicon-arrow-left"></span> <%= t 'helpers.links.back' %></button>
+    </div>
   </div>
-</div>
 </div>
