--- a/app/views/vue/_vue_paginator.html.erb
+++ b/app/views/vue/_vue_paginator.html.erb
@@ -6,13 +6,16 @@ Arguments:
 <div class="text-center">
   <ul class="pagination">
     <li @click="show(0)" :class="{disabled: isDisable(0)}"><a href="#"><%= raw(t 'views.pagination.first') %></a></li>
-    <li @click="show(page.current - 1)" :class="{disabled: isDisable(page.current - 1)}"><a href="#"><%= raw(t 'views.pagination.previous') %></a></li>
+    <li @click="show(page.current - 1)" :class="{disabled: isDisable(page.current - 1)}">
+      <a href="#"><%= raw(t 'views.pagination.previous') %></a></li>
     <li v-if="visibleTruncate('prev')" class="disabled"><span><%= raw(t 'views.pagination.truncate') %></span></li>
     <li v-for="v in visibleNum" @click="show(page.current + v - 4)" :class="{active: v === 4}">
       <a href="#" v-text="page.current + v - 4"></a>
     </li>
     <li v-if="visibleTruncate('next')" class="disabled"><span><%= raw(t 'views.pagination.truncate') %></span></li>
-    <li @click="show(page.current + 1)" :class="{disabled: isDisable(page.current + 1)}"><a href="#"><%= raw(t 'views.pagination.next') %></a></li>
-    <li @click="show(page.max)" :class="{disabled: isDisable(page.max)}"><a href="#"><%= raw(t 'views.pagination.last') %></a></li>
+    <li @click="show(page.current + 1)" :class="{disabled: isDisable(page.current + 1)}">
+      <a href="#"><%= raw(t 'views.pagination.next') %></a></li>
+    <li @click="show(page.max)" :class="{disabled: isDisable(page.max)}">
+      <a href="#"><%= raw(t 'views.pagination.last') %></a></li>
   </ul>
 </div>
